# haskell-graphql

./: .gitignore  ChangeLog.md  README.md  haskell-graphql.cabal  package.yaml  pets.txt  stack.yaml
app/: Main.hs
src/GraphQL/: Core.hs  Parser.hs  Schema.hs
src/GraphQL/Parser/: Internal.hs  Schema.hs
test/: Spec.hs
