cabal-version: 1.12

name:           haskell-graphql
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/haskell-graphql#readme>
homepage:       https://github.com/treywood/haskell-graphql#readme
bug-reports:    https://github.com/treywood/haskell-graphql/issues
author:         Trey Wood
maintainer:     edwinjwood3rd@gmail.com
copyright:      2020 Trey Wood
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/treywood/haskell-graphql

library
  exposed-modules:
      GraphQL.Core
      GraphQL.Parser
      GraphQL.Schema
  other-modules:
      GraphQL.Parser.Internal
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , either
    , megaparsec
    , mtl
    , random
    , relude
  default-language: Haskell2010

executable haskell-graphql-exe
  main-is: Main.hs
  other-modules:
      Paths_haskell_graphql
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , haskell-graphql
    , megaparsec
    , mtl
    , random
  default-language: Haskell2010

test-suite haskell-graphql-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_haskell_graphql
      GraphQL.Core
      GraphQL.Parser
      GraphQL.Parser.Internal
      GraphQL.Schema
  hs-source-dirs:
      test,src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HUnit
    , base >=4.7 && <5
    , bytestring
    , megaparsec
    , mtl
    , random
    , raw-strings-qq
    , relude
  default-language: Haskell2010
